--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     {
         width: 30%;
         margin-right: 75px;
-        background-color: #00e6e6;
+        background-color: #DB2D2D;
     }
 
     body
