--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 @media all and (min-width: 600px) and (max-width: 1366px)
 {
     
@@ -6,7 +5,7 @@
     {
         width: 30%;
         margin-right: 75px;
-        background-color: #DB2D2D;
+        background-color: #00e6e6;
     }
 
     body
