--- a/index.css
+++ b/index.css
@@ -12,7 +12,6 @@
     {
         display: flex ; 
         border: 2px solid #3E3E3E;
-        border-radius: 10px;
         margin: 0;
         color: #3E3E3E;
         font-family: 'Source Sans Pro', sans-serif;
@@ -22,6 +21,13 @@
     {
         text-align: center;
         margin: 0 30px 20px 30px;
+    }
+
+    #loisir div 
+    {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
 
     
@@ -48,7 +54,6 @@
     body
     {
         border: 2px solid #3E3E3E;
-        border-radius: 10px;
         margin: 0;
         color: #3E3E3E;
         font-family: 'Source Sans Pro', sans-serif;
@@ -248,4 +253,3 @@ h1 , h2
 {
     font-size: 20px;
 }
-
