--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@media all and (min-width: 600px) and (max-width: 1366px)
+@media all and (min-width: 600px)    
 {
     
     .presentation
@@ -225,6 +225,25 @@ h1 , h2
 {
     width: 40%;
     padding-left: 20px;
+    list-style: none;
+}
+
+.special-point li::before
+{
+    content: "\25C9" ;
+    color: #DB2D2D;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+}
+
+.content ul:not(.special-point) li::before
+{
+    content: "\2022" ;
+    color: #DB2D2D;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
 }
 
 .content article
